--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,8 +7,8 @@
 <meta name="author" content="Chase Kanipe ">
 <meta name="description" content="Hello 👋 Welcome to my about page.
 I&amp;rsquo;m currently studying machine learning as a graduate student at UMD, working in computer security research, and spending my free time developing platforms for procedural and generative music.
-Overview Basics Location: College Park, Maryland 🇺🇸 Occupation: Computer security researcher, audio developer Education: Bachelor&amp;rsquo;s of Science in computer science at UMD Interests Here&amp;rsquo;s a list of interests I&amp;rsquo;ve accumulated over the years.
-Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language, analytic philosophy Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini (a little bit) " />
+DOWNLOAD CV
+A thread that runs through all my interests is my interest in what&amp;rsquo;s fundamental. Can see this through foundations of physics, cybersecuriy (assembly programming), neuroscience and cogniive science, and economics, which I see as a rigorous social science." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
@@ -40,19 +40,20 @@ Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic 
     <meta name="msapplication-TileColor" content="">
 
 
-<meta itemprop="name" content="About">
-<meta itemprop="description" content="Hello 👋 Welcome to my about page.
-I&rsquo;m currently studying machine learning as a graduate student at UMD, working in computer security research, and spending my free time developing platforms for procedural and generative music.
-Overview Basics Location: College Park, Maryland 🇺🇸 Occupation: Computer security researcher, audio developer Education: Bachelor&rsquo;s of Science in computer science at UMD Interests Here&rsquo;s a list of interests I&rsquo;ve accumulated over the years.
-Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language, analytic philosophy Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini (a little bit) ">
 
-<meta itemprop="wordCount" content="146">
-<meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Hello 👋 Welcome to my about page.
-I&rsquo;m currently studying machine learning as a graduate student at UMD, working in computer security research, and spending my free time developing platforms for procedural and generative music.
-Overview Basics Location: College Park, Maryland 🇺🇸 Occupation: Computer security researcher, audio developer Education: Bachelor&rsquo;s of Science in computer science at UMD Interests Here&rsquo;s a list of interests I&rsquo;ve accumulated over the years.
-Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language, analytic philosophy Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini (a little bit) "/>
+  <meta itemprop="name" content="About">
+  <meta itemprop="description" content="Hello 👋 Welcome to my about page.
+I’m currently studying machine learning as a graduate student at UMD, working in computer security research, and spending my free time developing platforms for procedural and generative music.
+DOWNLOAD CV
+A thread that runs through all my interests is my interest in what’s fundamental. Can see this through foundations of physics, cybersecuriy (assembly programming), neuroscience and cogniive science, and economics, which I see as a rigorous social science.">
+  <meta itemprop="wordCount" content="421">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="About">
+  <meta name="twitter:description" content="Hello 👋 Welcome to my about page.
+I’m currently studying machine learning as a graduate student at UMD, working in computer security research, and spending my free time developing platforms for procedural and generative music.
+DOWNLOAD CV
+A thread that runs through all my interests is my interest in what’s fundamental. Can see this through foundations of physics, cybersecuriy (assembly programming), neuroscience and cogniive science, and economics, which I see as a rigorous social science.">
 
 
 
@@ -154,15 +155,13 @@ Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic 
 <p>I&rsquo;m currently studying <a href="https://cmns.umd.edu/graduate/science-academy/machine-learning">machine learning</a> as a graduate student at UMD, working in <a href="https://www.defense.gov/">computer security research</a>, and spending my free time <a href="https://github.com/procedural-audio">developing platforms</a> for procedural and generative music.</p>
 <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
+<p>DOWNLOAD CV</p>
+<p>A thread that runs through all my interests is my interest in what&rsquo;s fundamental. Can see this through foundations of physics, cybersecuriy (assembly programming), neuroscience and cogniive science, and economics, which I see as a rigorous social science.</p>
 <hr>
-<h2 id="overview">Overview</h2>
-<h3 id="basics">Basics</h3>
-<ul>
-<li><strong>Location</strong>: College Park, Maryland 🇺🇸</li>
-<li><strong>Occupation</strong>: Computer security researcher, audio developer</li>
-<li><strong>Education</strong>: Bachelor&rsquo;s of Science in computer science at UMD</li>
-</ul>
-<h3 id="interests">Interests</h3>
+<h2 id="biography">Biography</h2>
+<p>Here&rsquo;s a biography about me.</p>
+<hr>
+<h2 id="interests">Interests</h2>
 <p>Here&rsquo;s a list of interests I&rsquo;ve accumulated over the years.</p>
 <ul>
 <li><strong>Cybersecurity</strong>: Reverse engineering, binary exploitation, cryptography, symbolic execution</li>
@@ -175,8 +174,16 @@ Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic 
 <li><strong>Music</strong>: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards</li>
 <li><strong>VFX</strong>: Unreal Engine 5, Blender 3D, Houdini (a little bit)</li>
 </ul>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
+<p>INTEGRATE THESE PARAGRAPHS THROUGHOUT WEBSITE</p>
+<p>My career focus on cybersecurity was foreshadowed by an interest in security very young. Interest in fundemenals like assembly. Interest in being clever.</p>
+<p>Became interested in philosophy towards the beginning of college due to a confluence of factors including this talk on free will. Philosophy of religion. Eventually this matured into a focus on contemporary analytic philosophy. Dragged, against all my intuitions, to being a humean about causation and natural laws. Sympathetic to the mentaculus project. I like the rationalist and post-rationalist social movements. Sometimes called eliminative materialism, illusionism, but I just call the global workspace theory, good resources include [1, 2, 3]. Good blogs include SSC and Scott Aaronson.</p>
+<p>First became interested in economics and finance after watching a PBS documentary on the 2008 financial crisis. Ended up reading several books on he subject which was a good way to learn the mechanics of how the financial system works. I had always known I&rsquo;d be interested&hellip; since it&rsquo;s nerdy, but this kicked it off. This broadened into monetary policy due to federal reserve quantitative easing during COVID (see this documentary). Trade deficits, especially this book by Michael Pettis. I&rsquo;m no economist but I follow podcasts and occationally read reports by brookings. Good talks by Larry Summers [1, 2, 3, 4]. Other good books on interest rates and other topics.</p>
+<hr>
+<p>World view: information here.</p>
+<p>Things I&rsquo;m good at: &hellip;</p>
+<p><strong>Personalty</strong>: interoverted, openness, etc</p>
+<p><strong>Influences</strong>: David Albert, Peter Carruthers, Daniel Dennett, Michael Pettis,</p>
+<p>Recently, I&rsquo;ve been reading</p>
 
             </div>
         </article>
