--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -33,7 +33,7 @@ No worries, my friend, we&amp;rsquo;ve got a ride." />
 
 
 
-<link rel="stylesheet" href="/main.042da041ef83545948be38c0d3e98d536b4f26c8a00aacdfca62f7bab19d22a4.css" integrity="sha256-BC2gQe&#43;DVFlIvjjA0&#43;mNU2tPJsigCqzfymL3urGdIqQ=">
+<link rel="stylesheet" href="/main.89d6bae3ddbf531fda2750fb6c05ef64c4339dbd3694173ab59bb7054d7d0431.css" integrity="sha256-ida6492/Ux/aJ1D7bAXvZMQznb02lBc6tZu3BU19BDE=">
 
 
 
@@ -46,31 +46,32 @@ No worries, my friend, we&amp;rsquo;ve got a ride." />
     <meta name="msapplication-TileColor" content="">
 
 
-<meta itemprop="name" content="Contact">
-<meta itemprop="description" content="For business ventures and consulting to explore,
-Send your inquiries to this email&rsquo;s door
-chasekanipe [at] gmail [dot] com is the key,
-To unlock opportunities, let&rsquo;s see what can be.
-In College Park, Maryland, I reside,
-Where innovation and ideas collide.
-If you&rsquo;re close by and wish to chat,
-Let&rsquo;s share a coffee, how about that?
-But if distance keeps us far and wide,
-No worries, my friend, we&rsquo;ve got a ride.">
 
-<meta itemprop="wordCount" content="88">
-<meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Contact"/>
-<meta name="twitter:description" content="For business ventures and consulting to explore,
-Send your inquiries to this email&rsquo;s door
+  <meta itemprop="name" content="Contact">
+  <meta itemprop="description" content="For business ventures and consulting to explore,
+Send your inquiries to this email’s door
 chasekanipe [at] gmail [dot] com is the key,
-To unlock opportunities, let&rsquo;s see what can be.
+To unlock opportunities, let’s see what can be.
 In College Park, Maryland, I reside,
 Where innovation and ideas collide.
-If you&rsquo;re close by and wish to chat,
-Let&rsquo;s share a coffee, how about that?
+If you’re close by and wish to chat,
+Let’s share a coffee, how about that?
 But if distance keeps us far and wide,
-No worries, my friend, we&rsquo;ve got a ride."/>
+No worries, my friend, we’ve got a ride.">
+  <meta itemprop="wordCount" content="88">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Contact">
+  <meta name="twitter:description" content="For business ventures and consulting to explore,
+Send your inquiries to this email’s door
+chasekanipe [at] gmail [dot] com is the key,
+To unlock opportunities, let’s see what can be.
+In College Park, Maryland, I reside,
+Where innovation and ideas collide.
+If you’re close by and wish to chat,
+Let’s share a coffee, how about that?
+But if distance keeps us far and wide,
+No worries, my friend, we’ve got a ride.">
 
 
 
