--- a/public/cv2/index.html
+++ b/public/cv2/index.html
@@ -25,7 +25,7 @@ Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography,
 
 
 
-<link rel="stylesheet" href="/main.042da041ef83545948be38c0d3e98d536b4f26c8a00aacdfca62f7bab19d22a4.css" integrity="sha256-BC2gQe&#43;DVFlIvjjA0&#43;mNU2tPJsigCqzfymL3urGdIqQ=">
+<link rel="stylesheet" href="/main.89d6bae3ddbf531fda2750fb6c05ef64c4339dbd3694173ab59bb7054d7d0431.css" integrity="sha256-ida6492/Ux/aJ1D7bAXvZMQznb02lBc6tZu3BU19BDE=">
 
 
 
@@ -38,15 +38,16 @@ Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography,
     <meta name="msapplication-TileColor" content="">
 
 
-<meta itemprop="name" content="About">
-<meta itemprop="description" content="Summary: Graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
-Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini Work Experience Department of Defense January 2021 - February 2021 Completed a masters in machine learning with a focus on machine learning and projects in machine learning.">
 
-<meta itemprop="wordCount" content="1094">
-<meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Summary: Graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
-Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini Work Experience Department of Defense January 2021 - February 2021 Completed a masters in machine learning with a focus on machine learning and projects in machine learning."/>
+  <meta itemprop="name" content="About">
+  <meta itemprop="description" content="Summary: Graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
+Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini Work Experience Department of Defense January 2021 - February 2021 Completed a masters in machine learning with a focus on machine learning and projects in machine learning.">
+  <meta itemprop="wordCount" content="1094">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="About">
+  <meta name="twitter:description" content="Summary: Graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
+Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography, symbolic execution Computer Science: Programming, compilers, machine learning, operating system internals Music Technology: Digital signal processing, modular synthesizers, plugin development Philosophy: Epistemology, mind, metaphysics, modality, religion, language Physics: Foundations of physics, space and time, statistical mechanics Cognitive Science: Mental representation, global workspace theory Economics: The great recession, monetary policy, trade imbalances Music: Piano, acoustic guitar, electric guitar, desktop synthesizers, pedalboards VFX: Unreal Engine 5, Blender 3D, Houdini Work Experience Department of Defense January 2021 - February 2021 Completed a masters in machine learning with a focus on machine learning and projects in machine learning.">
 
 
 
@@ -367,31 +368,31 @@ Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography,
 </div>
 <hr>
 <h2 id="certifications">Certifications</h2>
-<h4 id="hahahugoshortcode1s18hbhb-oscp-offensive-security-certified-professional"><i class="fa fa-certificate" class="inline-icon"></i> OSCP (Offensive Security Certified Professional)</h4>
+<h4 id="hahahugoshortcode6s18hbhb-oscp-offensive-security-certified-professional"><i class="fa fa-certificate" class="inline-icon"></i> OSCP (Offensive Security Certified Professional)</h4>
 <ul>
 <li>Completed 3 months of penetration testing training in a lab with 50+ targets</li>
 <li>Mastered tools like nmap, metasploit, wireshark, burp suite, john the ripper, etc</li>
 <li>Completed a 24 hour practical exam that required the exploitation of 3 targets</li>
 </ul>
-<h4 id="hahahugoshortcode1s19hbhb-hackthebox-academy"><i class="fa fa-certificate" class="inline-icon"></i> HackTheBox Academy</h4>
+<h4 id="hahahugoshortcode6s19hbhb-hackthebox-academy"><i class="fa fa-certificate" class="inline-icon"></i> HackTheBox Academy</h4>
 <ul>
 <li>Completed 3 months of penetration testing training in a lab with 50+ targets</li>
 <li>Mastered tools like nmap, metasploit, wireshark, burp suite, john the ripper, etc</li>
 <li>Completed a 24 hour practical exam that required the exploitation of 3 targets</li>
 </ul>
-<h4 id="hahahugoshortcode1s20hbhb-maldev-academy"><i class="fa fa-certificate" class="inline-icon"></i> MalDev Academy</h4>
+<h4 id="hahahugoshortcode6s20hbhb-maldev-academy"><i class="fa fa-certificate" class="inline-icon"></i> MalDev Academy</h4>
 <ul>
 <li>Completed 3 months of penetration testing training in a lab with 50+ targets</li>
 <li>Mastered tools like nmap, metasploit, wireshark, burp suite, john the ripper, etc</li>
 <li>Completed a 24 hour practical exam that required the exploitation of 3 targets</li>
 </ul>
-<h4 id="hahahugoshortcode1s21hbhb-ringzer0-capture-the-flag"><i class="fa fa-certificate" class="inline-icon"></i> RingZer0 Capture the Flag</h4>
+<h4 id="hahahugoshortcode6s21hbhb-ringzer0-capture-the-flag"><i class="fa fa-certificate" class="inline-icon"></i> RingZer0 Capture the Flag</h4>
 <ul>
 <li>Completed 3 months of penetration testing training in a lab with 50+ targets</li>
 <li>Mastered tools like nmap, metasploit, wireshark, burp suite, john the ripper, etc</li>
 <li>Completed a 24 hour practical exam that required the exploitation of 3 targets</li>
 </ul>
-<h4 id="hahahugoshortcode1s22hbhb-cryptohack"><i class="fa fa-certificate" class="inline-icon"></i> CryptoHack</h4>
+<h4 id="hahahugoshortcode6s22hbhb-cryptohack"><i class="fa fa-certificate" class="inline-icon"></i> CryptoHack</h4>
 <ul>
 <li>Completed 3 months of penetration testing training in a lab with 50+ targets</li>
 <li>Mastered tools like nmap, metasploit, wireshark, burp suite, john the ripper, etc</li>
@@ -408,7 +409,7 @@ Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography,
 </ul>
 <hr>
 <h2 id="teaching">Teaching</h2>
-<h3 id="hahahugoshortcode1s23hbhb-cmsc388z-programming-in-rust-2021"><i class="fa fa-book" class="inline-icon"></i> CMSC388Z: Programming in Rust (2021)</h3>
+<h3 id="hahahugoshortcode6s23hbhb-cmsc388z-programming-in-rust-2021"><i class="fa fa-book" class="inline-icon"></i> CMSC388Z: Programming in Rust (2021)</h3>
 <p>A semester-long course at the University of Maryland on the Rust programming language. The course followed the rust book, and I was the primary lecturer for one of the sections, in addition to designing and grading the course assignments with another facilitator. The course syllabus can be found on the <a href="https://www.cs.umd.edu/class/fall2021/cmsc388Z/">course website</a>.</p>
 
 
@@ -417,7 +418,7 @@ Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography,
 
 
 <a href="https://gohugo.io/"   target="_blank" rel="noreferrer" class="markdown-btn">Course Website<i class="fa fa-download"></i></a>
-<h3 id="hahahugoshortcode1s25hbhb-mcwic-algorithmic-music-generation-2020"><i class="fa fa-book" class="inline-icon"></i> MCWIC: Algorithmic Music Generation (2020)</h3>
+<h3 id="hahahugoshortcode6s25hbhb-mcwic-algorithmic-music-generation-2020"><i class="fa fa-book" class="inline-icon"></i> MCWIC: Algorithmic Music Generation (2020)</h3>
 <p>An introductory lecture to the Maryland Center for Women in Computing (MCWIC) on how techniques like markov models and recurrent neural networks can facilitate music generation.</p>
 
 
@@ -426,7 +427,7 @@ Interests Cybersecurity: Reverse engineering, binary exploitation, cryptography,
 
 
 <a href="https://gohugo.io/"   target="_blank" rel="noreferrer" class="markdown-btn">Course Website<i class="fa fa-download"></i></a>
-<h3 id="hahahugoshortcode1s27hbhb-seds-programming-for-satellites-2020"><i class="fa fa-book" class="inline-icon"></i> SEDS: Programming for Satellites (2020)</h3>
+<h3 id="hahahugoshortcode6s27hbhb-seds-programming-for-satellites-2020"><i class="fa fa-book" class="inline-icon"></i> SEDS: Programming for Satellites (2020)</h3>
 <p>Led the design and implementation of a &ldquo;boot-camp&rdquo; for people joining the software team of SEDS at the University of Maryland, to introduce them to the skills needed to develop software for satellites.</p>
 
 
