--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -37,13 +37,14 @@
     <meta name="msapplication-TileColor" content="">
 
 
-<meta itemprop="name" content="Projects">
-<meta itemprop="description" content="Coming soon :)">
 
-<meta itemprop="wordCount" content="3">
-<meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Projects"/>
-<meta name="twitter:description" content="Coming soon :)"/>
+  <meta itemprop="name" content="Projects">
+  <meta itemprop="description" content="Coming soon :)">
+  <meta itemprop="wordCount" content="3">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Projects">
+  <meta name="twitter:description" content="Coming soon :)">
 
 
 
