--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -26,7 +26,7 @@ Internship Experience Margin Research Performed vulnerability analysis on variou
 
 
 
-<link rel="stylesheet" href="/main.042da041ef83545948be38c0d3e98d536b4f26c8a00aacdfca62f7bab19d22a4.css" integrity="sha256-BC2gQe&#43;DVFlIvjjA0&#43;mNU2tPJsigCqzfymL3urGdIqQ=">
+<link rel="stylesheet" href="/main.89d6bae3ddbf531fda2750fb6c05ef64c4339dbd3694173ab59bb7054d7d0431.css" integrity="sha256-ida6492/Ux/aJ1D7bAXvZMQznb02lBc6tZu3BU19BDE=">
 
 
 
@@ -39,17 +39,18 @@ Internship Experience Margin Research Performed vulnerability analysis on variou
     <meta name="msapplication-TileColor" content="">
 
 
-<meta itemprop="name" content="CV">
-<meta itemprop="description" content="I&rsquo;m a graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
-Work Experience Procedural Audio Founder and lead developer of Procedural Audio, which creates novel audio generation and processing tools for musicians, sound designers, and audio developers.
-Internship Experience Margin Research Performed vulnerability analysis on various IOT devices as part of a &ldquo;winternship&rdquo; program, including several surveillance cameras and webcams.">
 
-<meta itemprop="wordCount" content="1099">
-<meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="CV"/>
-<meta name="twitter:description" content="I&rsquo;m a graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
+  <meta itemprop="name" content="CV">
+  <meta itemprop="description" content="I’m a graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
 Work Experience Procedural Audio Founder and lead developer of Procedural Audio, which creates novel audio generation and processing tools for musicians, sound designers, and audio developers.
-Internship Experience Margin Research Performed vulnerability analysis on various IOT devices as part of a &ldquo;winternship&rdquo; program, including several surveillance cameras and webcams."/>
+Internship Experience Margin Research Performed vulnerability analysis on various IOT devices as part of a “winternship” program, including several surveillance cameras and webcams.">
+  <meta itemprop="wordCount" content="1099">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="CV">
+  <meta name="twitter:description" content="I’m a graduate of the University of Maryland with experience in vulnerability research, reverse engineering, software development, digital signal processing, and more. I prefer research-oriented work that utilizes, analyzes, or contributes to emerging technologies.
+Work Experience Procedural Audio Founder and lead developer of Procedural Audio, which creates novel audio generation and processing tools for musicians, sound designers, and audio developers.
+Internship Experience Margin Research Performed vulnerability analysis on various IOT devices as part of a “winternship” program, including several surveillance cameras and webcams.">
 
 
 
